[package]
name = "s3-delta-vacuum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake = {git="https://github.com/mrk-its/delta-rs.git", branch="vacuum", features=["s3-rustls"]}
tokio = { version = "1", features = ["macros", "rt"] }
maplit = "1"
env_logger = "0"
clap = {version = "4", features = ["derive"]}
log = "0"
url = "2"
serde = "1"
serde_json = "1"
rayon = "1"

[patch.crates-io]
object_store = {git = "https://github.com/mrk-its/arrow-rs"}

#[patch."https://github.com/delta-io/delta-rs.git"]
#deltalake = {path = "../delta-rs/rust"}
